--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ export default function KristinaLinkemRealEstate() {
 
       {/* About Kristina */}
       <section className="py-16 px-4 max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-        <img src="/images/KristinaPhoto.jpg" alt="Kristina Linkem professional" className="rounded-2xl shadow-xl" />
+        <img src="KristinaPhoto.jpg" alt="Kristina Linkem professional" className="rounded-2xl shadow-xl" />
         <div>
           <h2 className="text-3xl font-semibold mb-4">Meet Kristina Linkem</h2>
           <p className="text-gray-600 mb-4">With years of experience and a passion for helping clients find the perfect home, Kristina brings a warm, personalized approach to real estate. Whether you're buying, selling, or investing, her local knowledge and hands-on service ensure you're in good hands.</p>
           <div className="flex items-center gap-4 mt-6">
-            <img src="/images/KristinaHeadshot.jpg" alt="Kristina Linkem headshot" className="w-20 h-20 rounded-full shadow-lg" />
+            <img src="KristinaHeadshot.jpg" alt="Kristina Linkem headshot" className="w-20 h-20 rounded-full shadow-lg" />
             <div>
               <p className="font-semibold">Kristina Linkem</p>
               <p className="text-sm text-gray-500">Terry Wise & Associates</p>
@@ -34,7 +34,7 @@ export default function KristinaLinkemRealEstate() {
       <section className="bg-teal-50 py-16 px-4">
         <div className="max-w-5xl mx-auto text-center">
           <h2 className="text-3xl font-bold mb-4">Waterfront Lots – Moses Lake</h2>
-          <img src="/images/waterfront-lots.jpg" alt="Waterfront lot diagram" className="rounded-xl shadow-lg mx-auto mb-6" />
+          <img src="waterfront-lots.jpg" alt="Waterfront lot diagram" className="rounded-xl shadow-lg mx-auto mb-6" />
           <p className="text-gray-700 mb-6">Check out these 1/4 acre building lots positioned on the lake. Low bank private access, ready to build. Priced from $175,000 to $250,000—waterfront dream living made achievable!</p>
           <ul className="text-left text-gray-600 space-y-2 max-w-xl mx-auto">
             <li>✔️ Exclusive 22 Lots with Gated Entry</li>
@@ -53,7 +53,7 @@ export default function KristinaLinkemRealEstate() {
       {/* Featured Listing: Golden Given Parcels */}
       <section className="py-16 px-4 bg-white border-t">
         <div className="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-          <img src="/images/Waterfront.jpg" alt="Golden Given Parcels aerial" className="rounded-2xl shadow-xl" />
+          <img src="Waterfront.jpg" alt="Golden Given Parcels aerial" className="rounded-2xl shadow-xl" />
           <div>
             <h2 className="text-3xl font-bold mb-4">Two Parcels – Golden Given Rd E, Tacoma</h2>
             <p className="text-gray-700 mb-4">1.38 acres total, zoned Community Employment. Entitlements in process for a large warehouse with wetland approval, SEPA submitted, sewer plan approved, and water availability confirmed.</p>
