--- a/index.html
+++ b/index.html
@@ -12,7 +12,110 @@
   </style>
 </head>
 <body class="bg-white text-gray-800">
-  <!-- ... abbreviated for brevity ... -->
+  <!-- Navigation Bar -->
+  <nav class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between h-16 items-center">
+        <div class="flex-shrink-0 text-xl font-bold text-teal-700">Kristina Linkem</div>
+        <div class="hidden md:flex space-x-6">
+          <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
+          <a href="#listings" class="text-gray-700 hover:text-teal-600">Listings</a>
+          <a href="#testimonials" class="text-gray-700 hover:text-teal-600">Testimonials</a>
+          <a href="#contact" class="text-gray-700 hover:text-teal-600">Contact</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="relative bg-cover bg-center h-[80vh] flex items-center justify-center text-white shadow-lg" style="background-image: url('images/banner-pnw.jpg');">
+    <div class="bg-black/50 p-10 rounded-xl text-center max-w-3xl">
+      <h1 class="text-5xl font-bold mb-4 tracking-tight">Rooted in the Pacific Northwest</h1>
+      <p class="text-xl">Growing Dreams into Reality</p>
+    </div>
+  </section>
+
+  <!-- About Kristina -->
+  <section id="about" class="py-20 px-6 bg-gray-50">
+    <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+      <img src="images/KristinaPhoto.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
+      <div>
+        <h2 class="text-4xl font-bold mb-6 text-teal-700">Meet Kristina Linkem</h2>
+        <p class="text-gray-700 mb-6 text-lg leading-relaxed">With years of experience and a passion for helping clients find the perfect home, Kristina brings a warm, personalized approach to real estate. Whether you're buying, selling, or investing, her local knowledge and hands-on service ensure you're in good hands.</p>
+        <div class="flex items-center gap-4 mt-6">
+          <img src="images/KristinaHeadshot.jpg" alt="Kristina Linkem headshot" class="w-20 h-20 rounded-full shadow-lg border-4 border-white" />
+          <div>
+            <p class="font-semibold text-lg">Kristina Linkem</p>
+            <p class="text-sm text-gray-500">Terry Wise & Associates</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Featured Listings Anchor -->
+  <section id="listings" class="bg-gradient-to-b from-teal-100 to-white py-20 px-6">
+  <div class="max-w-5xl mx-auto text-center">
+    <h2 class="text-4xl font-bold text-teal-800 mb-8">Waterfront Lots – Moses Lake</h2>
+    <img src="images/waterfront-lots.jpg" alt="Waterfront lot diagram" class="rounded-2xl shadow-xl mx-auto mb-8 max-h-[400px] object-cover" />
+    <p class="text-gray-700 mb-6 text-lg">Check out these 1/4 acre building lots positioned on the lake. Low bank private access, ready to build. Priced from $175,000 to $250,000—waterfront dream living made achievable!</p>
+    <ul class="text-left text-gray-700 space-y-3 max-w-xl mx-auto text-base">
+      <li>✔️ Exclusive 22 Lots with Gated Entry</li>
+      <li>✔️ 326' of Lake Front</li>
+      <li>✔️ Community Park & Dock</li>
+      <li>✔️ 4 Bedroom Septic Designs</li>
+      <li>✔️ Cascade Valley Water & Grant County Jurisdiction</li>
+      <li>✔️ Room for Inground Pool, Sports Court, Garage or Gardens</li>
+    </ul>
+    <a href="https://www.cribflyer.com/3485-valley-road-ne-moses-lake" target="_blank" class="inline-block mt-8 text-white bg-teal-600 hover:bg-teal-700 transition px-8 py-3 rounded-full font-semibold shadow-md">View Full Listing</a>
+  </div>
+
+  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center mt-20">
+    <img src="images/Waterfront.jpg" alt="Golden Given Parcels aerial" class="rounded-2xl shadow-xl" />
+    <div>
+      <h2 class="text-4xl font-bold text-teal-700 mb-6">Two Parcels – Golden Given Rd E, Tacoma</h2>
+      <p class="text-gray-700 mb-6 text-lg">1.38 acres total, zoned Community Employment. Entitlements in process for a large warehouse with wetland approval, SEPA submitted, sewer plan approved, and water availability confirmed.</p>
+      <ul class="text-gray-700 space-y-2 text-base">
+        <li>✔️ Continue with warehouse development or adjust to maximize each parcel</li>
+        <li>✔️ CE zoning allows contractor yard, storage, daycare, restaurant, offices, warehouse, auto, and industrial uses</li>
+        <li>✔️ MLS 2348047 – $925,000</li>
+        <li>✔️ Address: 10510 and 10514 Golden Given Rd E, Tacoma</li>
+      </ul>
+      <a href="https://www.crexi.com/properties/1264567/washington-two-parcels---golden-given" target="_blank" class="inline-block mt-8 text-white bg-teal-600 hover:bg-teal-700 transition px-8 py-3 rounded-full font-semibold shadow-md">View Full Listing</a>
+    </div>
+  </div>
+</section>
+
+  <!-- Footer anchor setup -->
+  <section id="testimonials" class="py-20 px-6 bg-gray-50">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-4xl font-bold text-center text-teal-700 mb-12">Client Experiences</h2>
+    <div class="grid md:grid-cols-2 gap-8">
+      <div class="bg-white shadow-lg rounded-xl p-8 border border-gray-200">
+        <p class="text-gray-700 italic">"Kristina made selling our home and finding a new one such a smooth experience. Her knowledge and kindness set her apart."</p>
+        <p class="text-right text-sm mt-4 text-gray-500">— The Johnson Family</p>
+      </div>
+      <div class="bg-white shadow-lg rounded-xl p-8 border border-gray-200">
+        <p class="text-gray-700 italic">"I had no idea buying waterfront property could be this easy. Kristina guided us through every step."</p>
+        <p class="text-right text-sm mt-4 text-gray-500">— Megan S.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <!-- Contact anchor -->
+  <section id="contact" class="bg-white py-20 px-6 border-t">
+  <div class="max-w-4xl mx-auto text-center">
+    <h2 class="text-4xl font-bold mb-6 text-teal-700">Ready to take the next step?</h2>
+    <p class="text-gray-600 mb-6 text-lg">Contact Kristina today and start your real estate journey with confidence.</p>
+    <div class="flex flex-col md:flex-row justify-center gap-6 text-gray-700 text-lg">
+      <a href="tel:2534051844" class="flex items-center gap-2 hover:text-teal-600">📞 253-405-1844</a>
+      <a href="mailto:kristina@thelinkemgroup.com" class="flex items-center gap-2 hover:text-teal-600">✉️ kristina@thelinkemgroup.com</a>
+    </div>
+  </div>
+</section>
+
+  <!-- Footer -->
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
     © 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates
   </footer>
