--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
   <!-- About Kristina -->
   <section id="about" class="py-20 px-6 bg-gray-50">
     <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-      <img src="images/KristinaPhoto.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
+      <img src="KristinaPhoto.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
       <div>
         <h2 class="text-4xl font-bold mb-6 text-teal-700">Meet Kristina Linkem</h2>
         <p class="text-gray-700 mb-6 text-lg leading-relaxed">With years of experience and a passion for helping clients find the perfect home, Kristina brings a warm, personalized approach to real estate. Whether you're buying, selling, or investing, her local knowledge and hands-on service ensure you're in good hands.</p>
         <div class="flex items-center gap-4 mt-6">
-          <img src="images/KristinaHeadshot.jpg" alt="Kristina Linkem headshot" class="w-20 h-20 rounded-full shadow-lg border-4 border-white" />
+          <img src="KristinaHeadshot.jpg" alt="Kristina Linkem headshot" class="w-20 h-20 rounded-full shadow-lg border-4 border-white" />
           <div>
             <p class="font-semibold text-lg">Kristina Linkem</p>
             <p class="text-sm text-gray-500">Terry Wise & Associates</p>
@@ -57,7 +57,7 @@
   <section id="listings" class="bg-gradient-to-b from-teal-100 to-white py-20 px-6">
   <div class="max-w-5xl mx-auto text-center">
     <h2 class="text-4xl font-bold text-teal-800 mb-8">Waterfront Lots – Moses Lake</h2>
-    <img src="images/waterfront-lots.jpg" alt="Waterfront lot diagram" class="rounded-2xl shadow-xl mx-auto mb-8 max-h-[400px] object-cover" />
+    <img src="waterfront-lots.jpg" alt="Waterfront lot diagram" class="rounded-2xl shadow-xl mx-auto mb-8 max-h-[400px] object-cover" />
     <p class="text-gray-700 mb-6 text-lg">Check out these 1/4 acre building lots positioned on the lake. Low bank private access, ready to build. Priced from $175,000 to $250,000—waterfront dream living made achievable!</p>
     <ul class="text-left text-gray-700 space-y-3 max-w-xl mx-auto text-base">
       <li>✔️ Exclusive 22 Lots with Gated Entry</li>
@@ -71,7 +71,7 @@
   </div>
 
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center mt-20">
-    <img src="images/Waterfront.jpg" alt="Golden Given Parcels aerial" class="rounded-2xl shadow-xl" />
+    <img src="Waterfront.jpg" alt="Golden Given Parcels aerial" class="rounded-2xl shadow-xl" />
     <div>
       <h2 class="text-4xl font-bold text-teal-700 mb-6">Two Parcels – Golden Given Rd E, Tacoma</h2>
       <p class="text-gray-700 mb-6 text-lg">1.38 acres total, zoned Community Employment. Entitlements in process for a large warehouse with wetland approval, SEPA submitted, sewer plan approved, and water availability confirmed.</p>
