--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16 items-center">
         <div class="flex-shrink-0">
-  <img src="images/logo.png" alt="Kristina Linkem Logo" class="h-10" />
+  <img src="logo.png" alt="Kristina Linkem Logo" class="h-10" />
 </div>
         <div class="hidden md:flex space-x-6">
           <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
@@ -40,12 +40,12 @@
   <!-- About Kristina -->
   <section id="about" class="py-20 px-6 bg-gray-50">
     <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
-      <img src="images/kristina-professional.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
+      <img src="kristina-professional.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
       <div>
         <h2 class="text-4xl font-bold mb-6 text-teal-700">Meet Kristina Linkem</h2>
         <p class="text-gray-700 mb-6 text-lg leading-relaxed">With years of experience and a passion for helping clients find the perfect home, Kristina brings a warm, personalized approach to real estate. Whether you're buying, selling, or investing, her local knowledge and hands-on service ensure you're in good hands.</p>
         <div class="flex items-center gap-4 mt-6">
-          <img src="images/kristina-headshot.jpg" alt="Kristina Linkem headshot" class="w-20 h-20 rounded-full shadow-lg border-4 border-white" />
+          <img src="kristina-headshot.jpg" alt="Kristina Linkem headshot" class="w-20 h-20 rounded-full shadow-lg border-4 border-white" />
           <div>
             <p class="font-semibold text-lg">Kristina Linkem</p>
             <p class="text-sm text-gray-500">Terry Wise & Associates</p>
@@ -73,7 +73,7 @@
   </div>
 
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center mt-20">
-    <img src="images/map-of-parcels.jpg" alt="Golden Given Parcels aerial" class="rounded-2xl shadow-xl" />
+    <img src="map-of-parcels.jpg" alt="Golden Given Parcels aerial" class="rounded-2xl shadow-xl" />
     <div>
       <h2 class="text-4xl font-bold text-teal-700 mb-6">Two Parcels – Golden Given Rd E, Tacoma</h2>
       <p class="text-gray-700 mb-6 text-lg">1.38 acres total, zoned Community Employment. Entitlements in process for a large warehouse with wetland approval, SEPA submitted, sewer plan approved, and water availability confirmed.</p>
