--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16 items-center">
         <div class="flex-shrink-0">
-  <img src="logo.png" alt="Kristina Linkem Logo" class="h-10" />
+  <img src=\"logo.png" alt="Kristina Linkem Logo" class="h-10" />
 </div>
         <div class="hidden md:flex space-x-6">
           <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
@@ -30,7 +30,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative bg-cover bg-center h-[80vh] flex items-center justify-center text-white shadow-lg" style="background-image: url('images/banner-pnw.jpg');">
+  <section class="relative bg-cover bg-center h-[80vh] flex items-center justify-center text-white shadow-lg" style="background-image: url\('banner-pnw.jpg');">
     <div class="bg-black/50 p-10 rounded-xl text-center max-w-3xl">
       <h1 class="text-5xl font-bold mb-4 tracking-tight">Rooted in the Pacific Northwest</h1>
       <p class="text-xl">Growing Dreams into Reality</p>
@@ -59,7 +59,7 @@
   <section id="listings" class="bg-gradient-to-b from-teal-100 to-white py-20 px-6">
   <div class="max-w-5xl mx-auto text-center">
     <h2 class="text-4xl font-bold text-teal-800 mb-8">Waterfront Lots – Moses Lake</h2>
-    <img src="images/lakefront-aerial-view.jpg" alt="Waterfront lot diagram" class="rounded-2xl shadow-xl mx-auto mb-8 max-h-[400px] object-cover" />
+    <img src="lakefront-aerial-view.jpg" alt="Waterfront lot diagram" class="rounded-2xl shadow-xl mx-auto mb-8 max-h-[400px] object-cover" />
     <p class="text-gray-700 mb-6 text-lg">Check out these 1/4 acre building lots positioned on the lake. Low bank private access, ready to build. Priced from $175,000 to $250,000—waterfront dream living made achievable!</p>
     <ul class="text-left text-gray-700 space-y-3 max-w-xl mx-auto text-base">
       <li>✔️ Exclusive 22 Lots with Gated Entry</li>
