--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative bg-cover bg-center h-[80vh] flex items-center justify-center text-white shadow-lg" style="background-image: url\('banner-pnw.jpg');">
+  <section class="relative bg-cover bg-center h-[80vh] flex items-center justify-center text-white shadow-lg" style="background-image: url('banner-pnw.jpg');">
     <div class="bg-black/50 p-10 rounded-xl text-center max-w-3xl">
       <h1 class="text-5xl font-bold mb-4 tracking-tight">Rooted in the Pacific Northwest</h1>
       <p class="text-xl">Growing Dreams into Reality</p>
