--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16 items-center">
         <div class="flex-shrink-0">
-  <img src=\"logo.png" alt="Kristina Linkem Logo" class="h-10" />
+  <img src="logo.png" alt="Kristina Linkem Logo" class="h-10" />
 </div>
         <div class="hidden md:flex space-x-6">
           <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
