--- a/index.html
+++ b/index.html
@@ -12,32 +12,14 @@
   </style>
 </head>
 <body class="bg-white text-gray-800">
-  <!-- Navigation Bar -->
-  <nav class="bg-white shadow-md sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between h-16 items-center">
-        <div class="flex-shrink-0">
-  <img src="logo.png" alt="Kristina Linkem Logo" class="h-10" />
-</div>
-        <div class="hidden md:flex space-x-6">
-          <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
-          <a href="#listings" class="text-gray-700 hover:text-teal-600">Listings</a>
-          <a href="#testimonials" class="text-gray-700 hover:text-teal-600">Testimonials</a>
-          <a href="#contact" class="text-gray-700 hover:text-teal-600">Contact</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  
 
-  <!-- Hero Section -->
-  <section class="relative bg-cover bg-center h-[80vh] flex items-center justify-center text-white shadow-lg" style="background-image: url('banner-pnw.jpg');">
-    <div class="bg-black/50 p-10 rounded-xl text-center max-w-3xl">
-      <h1 class="text-5xl font-bold mb-4 tracking-tight">Rooted in the Pacific Northwest</h1>
-      <p class="text-xl">Growing Dreams into Reality</p>
-    </div>
-  </section>
+<!-- Banner Image with CTA -->
+<section class="relative bg-cover bg-center h-[60vh] w-full flex items-end justify-center pb-12" style="background-image: url('banner-pnw.jpg');">
+  <a href="#contact" class="text-white bg-teal-600 hover:bg-teal-700 transition px-8 py-3 rounded-full font-semibold shadow-lg">Work With Kristina</a>
+</section>
 
-  <!-- About Kristina -->
+    <!-- About Kristina -->
   <section id="about" class="py-20 px-6 bg-gray-50">
     <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
       <img src="kristina-professional.jpg" alt="Kristina Linkem professional" class="rounded-2xl shadow-2xl" />
