--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 
 <!-- Banner Image with CTA -->
-<section class="relative bg-cover bg-center h-[60vh] w-full flex items-end justify-center pb-12" style="background-image: url('banner-pnw.jpg');">
+<section class="relative bg-cover bg-center h-[60vh] w-full flex items-end justify-center pb-12" style="background-image: url('pnw-banner.jpg');">
   <a href="#contact" class="text-white bg-teal-600 hover:bg-teal-700 transition px-8 py-3 rounded-full font-semibold shadow-lg">Work With Kristina</a>
 </section>
 
