--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
   </style>
 </head>
 <body class="bg-white text-gray-800">
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between items-center h-16">
+        <div class="flex-shrink-0">
+  <img src="logo.png" alt="Kristina Linkem Logo" class="h-10" />
+</div>
+        <nav class="hidden md:flex space-x-6">
+          <a href="#about" class="text-gray-700 hover:text-teal-600">About</a>
+          <a href="#listings" class="text-gray-700 hover:text-teal-600">Listings</a>
+          <a href="#testimonials" class="text-gray-700 hover:text-teal-600">Testimonials</a>
+          <a href="#contact" class="text-gray-700 hover:text-teal-600">Contact</a>
+        </nav>
+      </div>
+    </div>
+  </header>
   
 
 <!-- Banner Image with Tagline and CTA -->
@@ -117,6 +132,9 @@
 
   <!-- Footer -->
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
+  <div class="mb-4">
+    <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12" />
+  </div>
     © 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates
   </footer>
 </body>
