--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section class="relative bg-cover bg-center h-[60vh] w-full flex flex-col items-center justify-center text-white text-center font-sans" style="background-image: url('pnw-banner.jpg');">
   <h1 class="text-6xl font-bold drop-shadow">Rooted in the Pacific Northwest</h1>
   <p class="text-2xl drop-shadow mb-4">Growing Dreams into Reality</p>
-  <a href="#contact" class="text-white bg-teal-600 hover:bg-teal-700 transition px-10 py-4 mt-4 rounded-full font-bold text-lg shadow-lg">Work With Kristina</a>
+  <a href="#contact" class="text-white bg-teal-600 hover:bg-teal-700 transition px-10 py-4 mt-10 rounded-full font-bold text-lg shadow-lg">Work with Kristina</a>
 </section>
 
     <!-- About Kristina -->
