--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section class="relative bg-cover bg-center h-[60vh] w-full flex flex-col items-center justify-center text-white text-center font-sans" style="background-image: url('pnw-banner.jpg');">
   <h1 class="text-6xl font-bold drop-shadow">Rooted in the Pacific Northwest</h1>
   <p class="text-2xl drop-shadow mb-4">Growing Dreams into Reality</p>
-  <a href="#contact" class="text-white bg-teal-600 hover:bg-teal-700 transition px-10 py-4 mt-10 rounded-full font-bold text-lg shadow-lg">Work with Kristina</a>
+  <a href="#contact" class="text-white bg-teal-600 hover:bg-teal-700 transition px-10 py-4 mt-32 rounded-full font-bold text-lg shadow-lg">Work with Kristina</a>
 </section>
 
     <!-- About Kristina -->
@@ -132,10 +132,10 @@
 
   <!-- Footer -->
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
-  <div class="mb-4">
+  <div>© 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates</div>
+  <div class="bg-white py-4 mt-4">
     <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12" />
   </div>
-    © 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates
   </footer>
 </body>
 </html>
