--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
   <!-- Footer -->
   <footer class="bg-teal-700 text-white py-6 text-center text-sm">
-  <div>© 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates</div>
-  <div class="bg-white py-4 mt-4">
+  <div class="bg-white py-4 mb-4">
     <img src="logo.png" alt="Kristina Linkem Logo" class="mx-auto h-12" />
   </div>
+  <div>© 2025 Kristina Linkem Land Real Estate — Terry Wise & Associates</div>
   </footer>
 </body>
 </html>
